# openfoam-mcp-server

./: .clang-format  .claude  .gitignore  2025-08-11-check-any-converstion-happened-into-this-codebase.txt  BRANCH_STRATEGY.md  CFD_PROJECT_GUIDE.md  CI_STATUS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  PRODUCTION_VIDEO_GUIDE.md  RDE_Longitudinal_Analysis_Guide.md  RDE_THRUST_ANALYSIS_REPORT.md  README.md  ROADMAP.md  ULTRATHINK_SUMMARY.md  calculate_rde_thrust.py  create_rde_frames.py  demo_2d_rde_video_system.py  fix_production_mesh.sh  generate_demo_video.py  generate_production_video.py  generate_production_videos.py  generate_viz.py  openfoam-mcp-server  package.json  paraview.80s-76484,codespaces-3db3df.btr  paraview_server.py  quick_video_demo.py  run_production_rde.sh  test_2d_geometry.cpp  test_annular_mesh_generator.cpp  test_cellular_detonation_2d.cpp  test_cellular_detonation_model.cpp  test_complete_rde_system.cpp  test_comprehensive_validation.cpp  test_performance_optimization.cpp  (+10 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
RDE/: RDE_roadmap.md  cellular_detonation_integration.md  expert_gap_analysis.md  quick_start_guide.md  research.md  todo.md
RDE/data/SDToolbox/: LICENCE.txt  manifest_11Feb2023.txt
data/: validation_benchmarks.json
demo_2d_rde_output/: chemistry_config.json  educational_content_cellular_evolution.json  educational_content_injection_coupling.json  educational_content_multi_wave_collision.json  educational_content_wave_propagation.json  geometry_config.json  paraview_2d_rde.py  system_summary.json  video_config.json
demo_video_output/: demo_config.json
docs/: openfoam_universe.md
examples/: cellular_detonation_usage.cpp  comprehensive_cfd_demo.cpp  intent_to_openfoam.md  mcp_demo.cpp
immediate_rde_demo/: demo_specifications.json
mechanisms/: gri30.yaml
paraview-demo/: generate_2d_rde_visualization.py  generate_visualization.py
production_videos/: paraview_H2_fuel_consumption.py  paraview_O2_oxidizer_depletion.py  paraview_pressure_shock_wave.py  paraview_temperature_detonation_wave.py
results/car_aerodynamics/0/: U  p
results/car_aerodynamics/constant/: physicalProperties
results/car_aerodynamics/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
results/cavity/0.5/: U  epsilon  k  nut  p  phi
results/cavity/1/: U  epsilon  k  nut  p  phi
results/cavity/1.5/: U  epsilon  k  nut  p  phi
results/cavity/10/: U  epsilon  k  nut  p  phi
results/cavity/2/: U  epsilon  k  nut  p  phi
results/cavity/2.5/: U  epsilon  k  nut  p  phi
results/cavity/3/: U  epsilon  k  nut  p  phi
results/cavity/3.5/: U  epsilon  k  nut  p  phi
results/cavity/4/: U  epsilon  k  nut  p  phi
results/cavity/4.5/: U  epsilon  k  nut  p  phi
results/cavity/5/: U  epsilon  k  nut  p  phi
results/cavity/5.5/: U  epsilon  k  nut  p  phi
results/cavity/6/: U  epsilon  k  nut  p  phi
results/cavity/6.5/: U  epsilon  k  nut  p  phi
results/cavity/7/: U  epsilon  k  nut  p  phi
results/cavity/7.5/: U  epsilon  k  nut  p  phi
results/cavity/8/: U  epsilon  k  nut  p  phi
results/cavity/8.5/: U  epsilon  k  nut  p  phi
results/cavity/9/: U  epsilon  k  p  (+2 more)
results/cavity/9.5/: U  epsilon  k  nut  p  phi
scripts/: generate_changelog.py  pdf_splitter.py  setup_validation_mechanisms.py
src/: main.cpp  main_minimal.cpp  main_test.cpp  physics_intent.hpp
src/mcp/: json_rpc.cpp  json_rpc.hpp  server.cpp  server.hpp
src/openfoam/: case_manager.cpp  case_manager.hpp  cellular_detonation_2d.cpp  cellular_detonation_2d.hpp  cellular_detonation_model.cpp  cellular_detonation_model.hpp  external_flow.cpp  external_flow.hpp  heat_transfer.cpp  heat_transfer.hpp  mesh_quality.cpp  mesh_quality.hpp  multiphase_flow.cpp  multiphase_flow.hpp  pipe_flow.cpp  pipe_flow.hpp  rde_expert_workflow.cpp  rde_expert_workflow.hpp  rotating_detonation_engine.cpp  rotating_detonation_engine.hpp  snappy_templates.cpp  snappy_templates.hpp  stl_analyzer.cpp  stl_analyzer.hpp  turbulence_utils.cpp  turbulence_utils.hpp
src/physics/: cantera_wrapper.cpp  cantera_wrapper.hpp  chapman_jouguet_solver.hpp  test_cantera_wrapper.cpp
src/tools/: analyze_external_flow.cpp  analyze_external_flow.hpp  annular_mesh_generator.cpp  annular_mesh_generator.hpp  cfd_assistant_registration.cpp  cfd_assistant_tool.cpp  cfd_assistant_tool.hpp  context_engine.cpp  context_engine.hpp  external_flow_tool.cpp  external_flow_tool.hpp  heat_transfer_tool.cpp  heat_transfer_tool.hpp  mcp_tool_registry.hpp  mesh_quality_tool.cpp  mesh_quality_tool.hpp  multiphase_flow_tool.cpp  multiphase_flow_tool.hpp  pipe_flow_tool.cpp  pipe_flow_tool.hpp  rde_3d_geometry.cpp  rde_3d_geometry.hpp  rde_3d_geometry_tool.cpp  rde_3d_geometry_tool.hpp  rde_3d_performance.cpp  rde_3d_performance.hpp  rde_3d_performance_tool.cpp  rde_3d_performance_tool.hpp  rde_3d_wave_analyzer.cpp  rde_3d_wave_analyzer.hpp  rde_3d_wave_tool.cpp  rde_3d_wave_tool.hpp  rde_analysis_tool.cpp  rde_analysis_tool.hpp  rde_performance_calculator.cpp  rde_performance_calculator.hpp  rde_thrust_calculator.hpp  rde_video_generator.cpp  rde_video_generator.hpp  rde_wave_analyzer.cpp  (+12 more)
src/utils/: logging.cpp  logging.hpp  terminal_manager.cpp  terminal_manager.hpp
src/validation/: rde_validation_framework.cpp  rde_validation_framework.hpp
tests/: Makefile  test_cellular_model  test_cellular_model.cpp  test_rde_validation.cpp
tests/benchmarks/: run_benchmarks.py
tests/integration/: mcp_protocol_test.py  test_e2e_workflows.py  test_mcp_protocol.py  test_tool_registration.py
tests/performance/: benchmark_tests.py
tests/unit/: basic_tests.py
tests/validation/: analytical_solutions.py  external_flow_validation.py  external_flow_validation_report.txt  generate_report.py  heat_transfer_validation.py  heat_transfer_validation_report.txt  multiphase_flow_validation.py  multiphase_flow_validation_report.txt  pipe_flow_validation.py  pipe_flow_validation_report.txt  run_all_tests.py  run_all_validations.py
(+294 files in other folders)
